# api_sync

./: .coverage  hello.py  pyproject.toml
codigos/: __init__.py  app.py  schemas.py
tests/: conftest.py  test_app.py
